Update readme with demo page.

--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 Canvas/Javascript based solution for the instagram challenge.
-See http://instagram-engineering.tumblr.com/post/12651721845/instagram-engineering-challenge-the-unshredder for more detail.
+See http://instagram-engineering.tumblr.com/post/12651721845/instagram-engineering-challenge-the-unshredder for challenge detail.
+
+Demo at http://vidoss.github.com/
